# openvpn-auth-aad

./: .bintray.json.in  .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  Makefile.am  README  README.md  SECURITY.md  auth-aad.c  auth_aad.c  bootstrap.sh  utils.c  utils.h
contrib/: server.conf
debian/: changelog  control  copyright  openvpn-auth-aad.install  openvpn-auth-aad.lintian-overrides  rules  watch
doc/: index.md  ubuntu.md
docker/debian/: Dockerfile
docker/ubuntu/: Dockerfile
openvpn/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool  version.sh
openvpn/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
openvpn/distro/: Makefile  Makefile.in
openvpn/distro/systemd/: Makefile  Makefile.in
openvpn/doc/: Makefile  Makefile.in
openvpn/doc/doxygen/: Makefile  Makefile.in  openvpn.doxyfile
openvpn/include/: Makefile  Makefile.in
openvpn/sample/: Makefile  Makefile.in
openvpn/src/: Makefile  Makefile.in
openvpn/src/compat/: Makefile  Makefile.in  compat.vcxproj
openvpn/src/openvpn/: Makefile  Makefile.in  openvpn.vcxproj  openvpn.vcxproj.filters
openvpn/src/openvpnmsica/: Makefile  Makefile.in  openvpnmsica.vcxproj  openvpnmsica.vcxproj.filters
openvpn/src/openvpnserv/: Makefile  Makefile.in  openvpnserv.vcxproj  (+1 more)
openvpn/tests/: Makefile  Makefile.in  t_client.sh
pam_aad/: Makefile  Makefile.in  config.status  configure  libtool
pam_aad/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
scripts/: docker.sh
test/: Makefile  dlopentest.c
(+19 files in other folders)
